# TorchSWE

./: .gitignore  .pylintrc  LICENSE  README.md  TorchSWE.py  config_template.yaml  pyproject.toml  requirements.txt  setup.cfg  setup.py
cases/: config_template.yaml  template.yaml
cases/delestre_et_al_2013/case_3.1.3/: analytical_solution.py  config.yaml  create_data.py  plot.py
cases/delestre_et_al_2013/case_3.1.4/: README.md  analytical_solution.py  config.yaml  create_data.py  plot.py
cases/delestre_et_al_2013/case_3.1.5/: analytical_solution.py  config.yaml  create_data.py  plot.py
cases/delestre_et_al_2013/case_4.2.2a/: config.yaml  create_data.py  plot.py
cases/delestre_et_al_2013/case_4.2.2b/: config.yaml  create_data.py  paper.mplstyle  plot.py
cases/kurganov_petrova_2007/case_4.2/: config.yaml  create_data.py  plot.py  pyvista_theme.json
cases/lister_1992/experiment_1/: README.md  config.yaml  create_data.py  plot.py  pyvista_theme.json
cases/lister_1992/experiment_1/experimental_data/: t=122.csv  t=271.csv  t=32.csv  t=486.csv  t=59.csv  t=727.csv
cases/lister_1992/experiment_1/model_prediction/: plot.py  solver.py
cases/xing_shu_2005/case01/: config.yaml  create_topo.py
cases/xing_shu_2005/case_4.1_smooth/: config.yaml  create_data.py  create_topo.py  plot.py
cases/xing_shu_2005/case_4.3_eps=0.2/: config.yaml  create_data.py  plot.py
cases/xing_shu_2005/case_4.4/: config.yaml  create_data.py  plot.py
cases/xing_shu_2005/case_5.3/: config.yaml  create_data.py  plot.py  plot3d.py  pyvista_theme.json
comparisons/geoclaw/xing_shu_2005/case_5.3/: Makefile  create_topo.py  plot.py  qinit.f90  setrun.py
conda/: README.md  all.yml  cupy-only.yml  development.yml  everything.yml  numpy-cupy.yml  numpy-only.yml  pytorch-only.yml  torchswe.yml
docs/: config_template.yaml
src/: boundary_conditions.py  flux.py  fvm.py  limiters.py  misc.py  numerical_flux.py  reconstruction.py  sources.py  temporal.py  update_ghost_cells.py
tests/core/: test_boundary_conditions.py
tests/data/: test_get_domain.script  test_get_empty_states.script  test_get_gridline.script  test_get_process.script  test_get_topography.script  test_states.script
tests/utils/: test_data.py  test_init_parallel.py  test_init_serial.py
torchswe/: __init__.py  __main__.py  __main_mpi__.py  boundary_conditions.py  fvm.py  misc.py  reconstruction.py  sources.py  temporal.py
torchswe/bcs/: __init__.py  _checker.pxd  cunumeric_const_val.pyx  cunumeric_linear_extrap.pyx  cupy_bcs.pyx  cupy_const_extrap.pyx  cupy_const_val.pyx  cupy_inflow.pyx  cupy_linear_extrap.pyx  cupy_outflow.pyx  cython_bcs.pyx  cython_const_extrap.pyx  cython_const_val.pyx  cython_inflow.pyx  cython_linear_extrap.pyx  cython_outflow.pyx
torchswe/core/: __init__.py  boundary_conditions.py  flux.py  fvm.py  initializer.py  limiters.py  misc.py  numerical_flux.py  reconstruction.py  sources.py  temporal.py
torchswe/core/legate/: __init__.py  limiters.py  misc.py  numerical_flux.py  reconstruction.py
torchswe/kernels/: __init__.py  cunumeric_flux.py  cunumeric_reconstruction.py  cupy_flux.pyx  cupy_kernels.pyx  cupy_minmod.pyx  cupy_reconstruction.pyx  cython_flux.pyx  cython_kernels.pyx  cython_minmod.pyx  cython_reconstruction.pyx
torchswe/kernels/cupy/: __init__.py  flux.pyx  minmod.py
torchswe/kernels/cython/: __init__.py  flux.pyx  minmod.pyx
torchswe/mpi/: __init__.py  boundary_conditions.py  data.py  initializer.py  io.py  temporal.py
torchswe/utils/: __init__.py  config.py  data.py  dummy.py  dummydict.py  esri.py  friction.py  init.py  io.py  misc.py  mpi.py  netcdf.py
torchswe/utils/data/: __init__.py  grid.py  source.py  states.py  topography.py
torchswe/utils/io/: __init__.py  esri.py  hdf5.py  netcdf.py
utils/: __init__.py  esri.py  initializer.py  netcdf.py
