[metadata]
name = TorchSWE
version = attr: torchswe.__version__
url = https://github.com/piyueh/TorchSWE/
author = Pi-Yueh Chuang
author_email = pychuang@gwu.edu
classifiers =
    Development Status :: 1 - Planning
    Environment :: Console
    Environment :: GPU :: NVIDIA CUDA
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Operating System :: Unix
    Programming Language :: Python :: 3 :: Only
    Topic :: Scientific/Engineering
license = BSD 3-Clause License
license_files = LICENSE
description = A shallow-water equation solver for pipeline landspill.
long_description = file: README.md
long_description_content_type = text/markdown
keywords = shallow-water equations, SWE, landspill, overland flow, pipeline
platforms = any

[options]
zip_safe = True
install_requires =
    numpy >= 1.20.3
    scipy >= 1.7.1
    matplotlib >= 3.4.2
    pyyaml >= 5.4.1
    netCDF4 >= 1.5.7
    pydantic >= 1.8.2
    mpi4py >= 3.0.3
python_requires = >=3.8
test_require = pytest
packages = find:

[options.extras_require]
cupy = cupy >= 9.0
pytorch = torch >= 1.8.1

[options.entry_points]
console_scripts =
    TorchSWE.py = torchswe.__main__:main
