[metadata]
name = TorchSWE
version = attr: torchswe.__version__
url = https://github.com/piyueh/TorchSWE/
author = Pi-Yueh Chuang
author_email = pychuang@gwu.edu
classifiers =
    Development Status :: 1 - Planning
    Environment :: Console
    Environment :: GPU :: NVIDIA CUDA
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Operating System :: Unix
    Programming Language :: Python :: 3 :: Only
    Topic :: Scientific/Engineering
license = BSD 3-Clause License
license_files = LICENSE
description = A shallow-water equation solver for pipeline landspill.
long_description = file: README.md
long_description_content_type = text/markdown
keywords = shallow-water equations, SWE, landspill, overland flow, pipeline
platforms = any

[options]
zip_safe = True
install_requires =
    mpi4py >= 3.0.3
    netCDF4 >= 1.5.7
    numpy >= 1.21.2
    pydantic >= 1.8.2
    pyyaml >= 5.4.1
    scipy >= 1.7.1
python_requires = >=3.9
dependency_links = https://download.pytorch.org/whl/torch_stable.html
test_require = pytest
packages = find:

[options.extras_require]
cupy = cupy-cuda112 >= 9.4.0
pytorch = torch==1.9.0+cu111

[options.entry_points]
console_scripts =
    TorchSWE.py = torchswe.__main__:main
