[metadata]
name = TorchSWE
version = attr: torchswe.__version__
url = https://github.com/piyueh/TorchSWE/
author = Pi-Yueh Chuang
author_email = pychuang@gwu.edu
classifiers =
    Development Status :: 1 - Planning
    Environment :: Console
    Environment :: GPU :: NVIDIA CUDA
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Operating System :: Unix
    Programming Language :: Python :: 3 :: Only
    Topic :: Scientific/Engineering
license = BSD 3-Clause License
license_files = LICENSE
description = A shallow-water equation solver for pipeline landspill.
long_description = file: README.md
long_description_content_type = text/markdown
keywords = shallow-water equations, SWE, landspill, overland flow, pipeline
platforms = any

[options]
zip_safe = False
install_requires =
    h5py >= 3.6.0
    mpi4py >= 3.1.3
    numpy >= 1.21.4
    pydantic >= 1.8.2
    pyyaml >= 5.4.1
    scipy >= 1.7.1
python_requires = >=3.9
dependency_links = https://download.pytorch.org/whl/torch_stable.html
test_require = pytest
packages = find:

[options.extras_require]
cupy-cuda102 = cupy-cuda102 >= 9.6.0
cupy-cuda110 = cupy-cuda110 >= 9.6.0
cupy-cuda111 = cupy-cuda111 >= 9.6.0
cupy-cuda112 = cupy-cuda112 >= 9.6.0
cupy-cuda113 = cupy-cuda113 >= 9.6.0
cupy-cuda114 = cupy-cuda114 >= 9.6.0
cupy-cuda115 = cupy-cuda115 >= 9.6.0
plot =
    matplotlib >= 3.5.1
    pyvista >= 0.32.1
    netCDF4 >= 1.5.8

[options.entry_points]
console_scripts =
    TorchSWE.py = torchswe.__main__:main
